Fixed bug #53511 (Exceptions are lost in case an exception is thrown in catch operator)